Bug 183631 - MathML WPT test for RadicalDegreeBottomRaisePercent fails
Summary: MathML WPT test for RadicalDegreeBottomRaisePercent fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: MathML (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Rob Buis
URL:
Keywords: InRadar
Depends on:
Blocks: mathml-core
  Show dependency treegraph
 
Reported: 2018-03-14 08:04 PDT by Frédéric Wang (:fredw)
Modified: 2019-07-15 13:25 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.56 KB, patch)
2019-07-15 08:23 PDT, Rob Buis
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews102 for mac-highsierra (3.37 MB, application/zip)
2019-07-15 09:29 PDT, EWS Watchlist
no flags Details
Archive of layout-test-results from ews106 for mac-highsierra-wk2 (2.88 MB, application/zip)
2019-07-15 09:39 PDT, EWS Watchlist
no flags Details
Archive of layout-test-results from ews213 for win-future (13.54 MB, application/zip)
2019-07-15 10:16 PDT, EWS Watchlist
no flags Details
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.90 MB, application/zip)
2019-07-15 10:19 PDT, EWS Watchlist
no flags Details
Archive of layout-test-results from ews114 for mac-highsierra (3.19 MB, application/zip)
2019-07-15 10:21 PDT, EWS Watchlist
no flags Details
Patch (24.24 KB, patch)
2019-07-15 10:27 PDT, Rob Buis
no flags Details | Formatted Diff | Diff
Patch (24.30 KB, patch)
2019-07-15 12:05 PDT, Rob Buis
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Frédéric Wang (:fredw) 2018-03-14 08:04:51 PDT
Test RadicalDegreeBottomRaisePercent from LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/radicals/root-parameters-1.html fails. This was the workaround we had in the past:

   function runTests() {
     test(function() {
       var v1 = 25;
       var v2 = 1000 * emToPx;
       var radicalHeight = getBox("base001").height + v2;
       // FIXME: The drawing and measuring of the radical's StretchyOperator seems weird... For now, we adjust the height to pass this test.
       radicalHeight -= v2;
       assert_approx_equals(getBox("ref001").top - getBox("index001").bottom,
                            v1 * radicalHeight / 100, epsilon,
                            "mroot: vertical position of index");
     }, "RadicalDegreeBottomRaisePercent");
Comment 1 Rob Buis 2019-07-15 08:23:17 PDT
Created attachment 374113 [details]
Patch
Comment 2 EWS Watchlist 2019-07-15 09:29:52 PDT
Comment on attachment 374113 [details]
Patch

Attachment 374113 [details] did not pass mac-ews (mac):
Output: https://webkit-queues.webkit.org/results/12743076

New failing tests:
mathml/presentation/roots.xhtml
Comment 3 EWS Watchlist 2019-07-15 09:29:54 PDT
Created attachment 374115 [details]
Archive of layout-test-results from ews102 for mac-highsierra

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: ews102  Port: mac-highsierra  Platform: Mac OS X 10.13.6
Comment 4 EWS Watchlist 2019-07-15 09:39:10 PDT
Comment on attachment 374113 [details]
Patch

Attachment 374113 [details] did not pass mac-wk2-ews (mac-wk2):
Output: https://webkit-queues.webkit.org/results/12743085

New failing tests:
mathml/presentation/roots.xhtml
Comment 5 EWS Watchlist 2019-07-15 09:39:12 PDT
Created attachment 374118 [details]
Archive of layout-test-results from ews106 for mac-highsierra-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: ews106  Port: mac-highsierra-wk2  Platform: Mac OS X 10.13.6
Comment 6 EWS Watchlist 2019-07-15 10:16:20 PDT
Comment on attachment 374113 [details]
Patch

Attachment 374113 [details] did not pass win-ews (win):
Output: https://webkit-queues.webkit.org/results/12743208

New failing tests:
mathml/presentation/roots.xhtml
Comment 7 EWS Watchlist 2019-07-15 10:16:26 PDT
Created attachment 374120 [details]
Archive of layout-test-results from ews213 for win-future

The attached test failures were seen while running run-webkit-tests on the win-ews.
Bot: ews213  Port: win-future  Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Comment 8 EWS Watchlist 2019-07-15 10:19:27 PDT
Comment on attachment 374113 [details]
Patch

Attachment 374113 [details] did not pass ios-sim-ews (ios-simulator-wk2):
Output: https://webkit-queues.webkit.org/results/12743118

New failing tests:
mathml/presentation/roots.xhtml
Comment 9 EWS Watchlist 2019-07-15 10:19:29 PDT
Created attachment 374121 [details]
Archive of layout-test-results from ews124 for ios-simulator-wk2

The attached test failures were seen while running run-webkit-tests on the ios-sim-ews.
Bot: ews124  Port: ios-simulator-wk2  Platform: Mac OS X 10.14.5
Comment 10 EWS Watchlist 2019-07-15 10:21:54 PDT
Comment on attachment 374113 [details]
Patch

Attachment 374113 [details] did not pass mac-debug-ews (mac):
Output: https://webkit-queues.webkit.org/results/12743146

New failing tests:
mathml/presentation/roots.xhtml
Comment 11 EWS Watchlist 2019-07-15 10:21:56 PDT
Created attachment 374122 [details]
Archive of layout-test-results from ews114 for mac-highsierra

The attached test failures were seen while running run-webkit-tests on the mac-debug-ews.
Bot: ews114  Port: mac-highsierra  Platform: Mac OS X 10.13.6
Comment 12 Rob Buis 2019-07-15 10:27:38 PDT
Created attachment 374123 [details]
Patch
Comment 13 WebKit Commit Bot 2019-07-15 11:59:40 PDT
Comment on attachment 374123 [details]
Patch

Rejecting attachment 374123 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 374123, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit

Logging in as commit-queue@webkit.org...
Fetching: https://bugs.webkit.org/attachment.cgi?id=374123&action=edit
Fetching: https://bugs.webkit.org/show_bug.cgi?id=183631&ctype=xml&excludefield=attachmentdata
Processing 1 patch from 1 bug.
Updating working directory
Processing patch 374123 from bug 183631.
Fetching: https://bugs.webkit.org/attachment.cgi?id=374123
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit

Committing to http://svn.webkit.org/repository/webkit/trunk ...
	M	LayoutTests/ChangeLog

ERROR from SVN:
Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date
W: 075b7acb258beb94870b74f55c4cb707035379cd and refs/remotes/origin/master differ, using rebase:
:040000 040000 3f11d1251926e090183cafa5b6d4fbcedf4eb4e5 8e8fa58e614e156be0fafc560fa1e328cf1874a8 M	LayoutTests
:040000 040000 c341b0652b65708b73e6466f3fa413dd7554dd5e 252a91d8c3a04c9cefd1521fb3806259df26606c M	Source
Current branch master is up to date.
ERROR: Not all changes have been committed into SVN, however the committed
ones (if any) seem to be successfully integrated into the working tree.
Please see the above messages for details.


Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit

Committing to http://svn.webkit.org/repository/webkit/trunk ...
	M	LayoutTests/ChangeLog

ERROR from SVN:
Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date
W: 075b7acb258beb94870b74f55c4cb707035379cd and refs/remotes/origin/master differ, using rebase:
:040000 040000 3f11d1251926e090183cafa5b6d4fbcedf4eb4e5 8e8fa58e614e156be0fafc560fa1e328cf1874a8 M	LayoutTests
:040000 040000 c341b0652b65708b73e6466f3fa413dd7554dd5e 252a91d8c3a04c9cefd1521fb3806259df26606c M	Source
Current branch master is up to date.
ERROR: Not all changes have been committed into SVN, however the committed
ones (if any) seem to be successfully integrated into the working tree.
Please see the above messages for details.


Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit
Updating OpenSource
Current branch master is up to date.

Full output: https://webkit-queues.webkit.org/results/12744024
Comment 14 Rob Buis 2019-07-15 12:05:11 PDT
Created attachment 374133 [details]
Patch
Comment 15 WebKit Commit Bot 2019-07-15 13:23:17 PDT
Comment on attachment 374133 [details]
Patch

Clearing flags on attachment: 374133

Committed r247441: <https://trac.webkit.org/changeset/247441>
Comment 16 WebKit Commit Bot 2019-07-15 13:23:19 PDT
All reviewed patches have been landed.  Closing bug.
Comment 17 Radar WebKit Bug Importer 2019-07-15 13:25:20 PDT
<rdar://problem/53118799>