MathML WPT test for RadicalDegreeBottomRaisePercent fails https://bugs.webkit.org/show_bug.cgi?id=183631

Patch by Rob Buis <rbuis@igalia.com> on 2019-07-15
Reviewed by Frédéric Wang.

LayoutTests/imported/w3c:

Adjust test expectation.

* web-platform-tests/mathml/presentation-markup/radicals/root-parameters-1-expected.txt:

Source/WebCore:

When stretching the radical operator also take thickness
and radical gap into account:
https://mathml-refresh.github.io/mathml-core/#radicals-msqrt-mroot

Test: imported/w3c/web-platform-tests/mathml/presentation-markup/radicals/root-parameters-1.html

* rendering/mathml/RenderMathMLRoot.cpp:
(WebCore::RenderMathMLRoot::layoutBlock):

LayoutTests:

Adjust test expectations.

* platform/ios/mathml/presentation/roots-expected.txt:
* platform/mac/mathml/presentation/roots-expected.txt:
* platform/win/mathml/presentation/roots-expected.txt:

Canonical link: https://commits.webkit.org/213674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247441 268f45cc-cd09-0410-ab3c-d52691b4dbfc